2003-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/svg.c: Allow the user to specify the initial background
	color via the -background option.  This is only useful if the SVG
	doesn't draw its own background rectangle.

2003-01-06  Albert Chin-A-Young  <china@thewrittenword.com>
	* ltdl/Makefile.am, ltdl/ltdl.c: Fix compilation problem
	under Tru64 UNIX 5.1.  The GraphicsMagick random.h was being
	included when the system random.h was needed.
	* configure.ac: Improve robustness of POSIX thread API tests
	by including pthread.h when building the test program.

2003-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.c: In IsImagesEqual() only use type 'long double'
	for error summation if QuantumDepth > 16 and 'long double' has
	more range than 'double'.
	* magick/quantize.c: In QuantizeImage() only use type 'long
	double' for error summation if QuantumDepth > 16 and 'long
	double' has more range than 'double'.
	* Replaced redundant code with macros.
	* Optimize mapping to monochrome.
	* utilities/conjure.c: Had missed removing this file earlier.

2003-01-04  Derry Bryson  <dbryson@techass.com>
	* magick/decorate.c: Fix typo.

2002-12-31  Cristy  <cristy@mystic.es.dupont.com>
	* magick/command.c: Do not quantize CMYK (bug fix).
	* magick/render.c: Ensure that stroke is not drawn wider than
	requested when antialiasing is disabled (bug fix).

2002-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.c: For TransformRGBImage() and RGBTransformImage()
	round values to int when creating tables rather than using scaling
	to avoid rounding.

2002-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* coders/png.c: Fixed compile problems.
	* magick/image.c: SyncImage() performance optimizations.
	* TransformRGBImage() cleanup/enhancements. Some rounding issues remain.
	* RGBTransformImage() cleanup/enhancements. Some rounding issues remain.

2002-12-24  Glenn Randers-Pehrson <randeg@alum.rpi.edu>